# Coral-Cmake

./: CMakeLists.txt
Coral.Managed/: CMakeLists.txt
Coral.Native/: CMakeLists.txt
